cluster-app/manifest/whoami/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  selector:
    app: whoami
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
    name: http
