cluster-app/manifest/whoami/03-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
spec:
  entryPoints:
  - https
  routes:
  - kind: Rule
    match: Host(`${host}`)
    services:
    - name: whoami
      port: 80
  tls:
    certResolver: default
    domains:
    - main: ${root_host}
      sans:
      - '*.${root_host}'
